sample/rsvp-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsvp-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsvp-web
  template:
    metadata:
      labels:
        app: rsvp-web
    spec:
      containers: 
      - name: rsvpd-web
        image: paichayon/rsvp:nginx-rewrite
        ports:
        - containerPort: 5000
          name: web-port
