sample/rsvp-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsvp-web
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Original-Path $request_uri;
spec:
  ingressClassName: nginx
  rules:
    - host: apps91.lab8088.online
      http:
        paths:
          - path: /sample-0(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: rsvp-web
                port:
                  number: 80
